feat: switchRouteSet
